@@ -33,7 +33,7 @@ public class ProducerTest {
         producerConfig.setClientConfig(clientConfig);
         CountDownLatch continueSendLatch = new CountDownLatch(2);
         for (int i = 0; i < 1; i++) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Producer producer = new DefaultProducer("default", producerConfig);
                 producer.start();
 
@@ -82,7 +82,7 @@ public class ProducerTest {
         producerConfig.setClientConfig(clientConfig);
         CountDownLatch continueSendLatch = new CountDownLatch(2);
         for (int i = 0; i < 1; i++) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Producer producer = new DefaultProducer("default", producerConfig);
                 producer.start();
 
@@ -135,7 +135,7 @@ public class ProducerTest {
         producerConfig.setClientConfig(clientConfig);
         CountDownLatch continueSendLatch = new CountDownLatch(2);
         for (int i = 0; i < 1; i++) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Producer producer = new DefaultProducer("default", producerConfig);
                 producer.start();
 
@@ -179,7 +179,7 @@ public class ProducerTest {
         producerConfig.setClientConfig(clientConfig);
         CountDownLatch continueSendLatch = new CountDownLatch(2);
         for (int i = 0; i < 1; i++) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Producer producer = new DefaultProducer("default", producerConfig);
                 producer.start();
 
